// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should be able to change the borderRadius of the input 1`] = `
<View
  pointerEvents="box-none"
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 1,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": 30,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-60}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 30,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-60}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 30,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-60}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 30,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-60}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={33}
      bbWidth={33}
      focusable={false}
      height={33}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 33,
            "width": 33,
          },
        ]
      }
      width={33}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={32}
            cy={32}
            fx={32}
            fy={32}
            gradient={
              Array [
                0.9375,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={32}
            ry={32}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,32 a32,32 0 0 1 32 -32 v2 v30 h-30 h-2 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={33}
      bbWidth={33}
      focusable={false}
      height={33}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -2,
            "transform": Array [
              Object {
                "translateX": -30,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 33,
            "width": 33,
          },
        ]
      }
      width={33}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={32}
            fx={0}
            fy={32}
            gradient={
              Array [
                0.9375,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={32}
            ry={32}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a32,32 0 0 1 32,32 h-2 h-30 v-30 v-2 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={33}
      bbWidth={33}
      focusable={false}
      height={33}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -30,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 33,
            "width": 33,
          },
        ]
      }
      width={33}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={32}
            cy={0}
            fx={32}
            fy={0}
            gradient={
              Array [
                0.9375,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={32}
            ry={32}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M32,32 a32,32 0 0 1 -32,-32 h2 h30 v30 v2 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={33}
      bbWidth={33}
      focusable={false}
      height={33}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -30,
              },
              Object {
                "translateY": -30,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 33,
            "width": 33,
          },
        ]
      }
      width={33}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0.9375,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={32}
            ry={32}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M32,0 a32,32 0 0 1 -32,32 v-2 v-30 h30 h2 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "position": "absolute",
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskPaintBelow"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={30}
              propList={
                Array [
                  "fill",
                ]
              }
              width={30}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={30}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -30,
                  0,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={30}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={30}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  -30,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={30}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={30}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -30,
                  -30,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={30}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4278190080}
          fillOpacity={0.08}
          height="100%"
          mask="maskPaintBelow"
          propList={
            Array [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingLeft": 18,
            "paddingRight": 20,
            "width": "100%",
          },
          Object {
            "borderRadius": 30,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": 25,
            },
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "width": "70%",
            }
          }
        />
      </View>
      <TextInput
        editable={true}
        placeholder="Email"
        placeholderTextColor="#C4C4C4"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontFamily": "Cairo-Regular",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Input component should be able to change the default style 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "margin": 40,
    }
  }
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 1,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={12}
            fx={12}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,12 a12,12 0 0 1 12 -12 v2 v10 h-10 h-2 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -2,
            "transform": Array [
              Object {
                "translateX": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={12}
            fx={0}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a12,12 0 0 1 12,12 h-2 h-10 v-10 v-2 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={0}
            fx={12}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,12 a12,12 0 0 1 -12,-12 h2 h10 v10 v2 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -10,
              },
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,0 a12,12 0 0 1 -12,12 v-2 v-10 h10 h2 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "position": "absolute",
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskPaintBelow"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  0,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4278190080}
          fillOpacity={0.08}
          height="100%"
          mask="maskPaintBelow"
          propList={
            Array [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingLeft": 18,
            "paddingRight": 20,
            "width": "100%",
          },
          Object {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": 25,
            },
            Object {
              "marginLeft": 5,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "width": "70%",
            }
          }
        />
      </View>
      <TextInput
        editable={true}
        placeholder="Email"
        placeholderTextColor="#C4C4C4"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontFamily": "Cairo-Regular",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Input component should be able to change the icon position 1`] = `
<View
  pointerEvents="box-none"
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 1,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={12}
            fx={12}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,12 a12,12 0 0 1 12 -12 v2 v10 h-10 h-2 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -2,
            "transform": Array [
              Object {
                "translateX": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={12}
            fx={0}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a12,12 0 0 1 12,12 h-2 h-10 v-10 v-2 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={0}
            fx={12}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,12 a12,12 0 0 1 -12,-12 h2 h10 v10 v2 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -10,
              },
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,0 a12,12 0 0 1 -12,12 v-2 v-10 h10 h2 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "position": "absolute",
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskPaintBelow"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  0,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4278190080}
          fillOpacity={0.08}
          height="100%"
          mask="maskPaintBelow"
          propList={
            Array [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingLeft": 18,
            "paddingRight": 20,
            "width": "100%",
          },
          Object {
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": 25,
            },
            Object {
              "marginLeft": 5,
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "width": "70%",
            }
          }
        />
      </View>
      <TextInput
        editable={true}
        placeholder="Email"
        placeholderTextColor="#C4C4C4"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontFamily": "Cairo-Regular",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Input component should render correctly, with the icon in the left by default 1`] = `
<View
  pointerEvents="box-none"
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 1,
        },
        undefined,
      ]
    }
  >
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="left"
            x1="1"
            x2="0"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "left",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth={3}
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": 10,
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": 3,
          },
        ]
      }
      width={3}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="right"
            x1="0"
            x2="1"
            y1="0"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "right",
            ]
          }
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width={2}
          x={0}
          y={-20}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": "100%",
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="bottom"
            x1="0"
            x2="0"
            y1="0"
            y2="1"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "bottom",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={3}
      bbWidth="100%"
      focusable={false}
      height={3}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": 10,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 3,
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGLinearGradient
            gradient={
              Array [
                0,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={0}
            name="top"
            x1="0"
            x2="0"
            y1="1"
            y2="0"
          />
        </RNSVGDefs>
        <RNSVGRect
          fill={
            Array [
              1,
              "top",
            ]
          }
          height={2}
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={-20}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": -2,
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={12}
            fx={12}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,12 a12,12 0 0 1 12 -12 v2 v10 h-10 h-2 Z"
          fill={
            Array [
              1,
              "topLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": -2,
            "transform": Array [
              Object {
                "translateX": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={12}
            fx={0}
            fy={12}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="topRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M0,0 a12,12 0 0 1 12,12 h-2 h-10 v-10 v-2 Z"
          fill={
            Array [
              1,
              "topRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": -2,
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={12}
            cy={0}
            fx={12}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomLeft"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,12 a12,12 0 0 1 -12,-12 h2 h10 v10 v2 Z"
          fill={
            Array [
              1,
              "bottomLeft",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight={13}
      bbWidth={13}
      focusable={false}
      height={13}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "left": "100%",
            "position": "absolute",
            "top": "100%",
            "transform": Array [
              Object {
                "translateX": -10,
              },
              Object {
                "translateY": -10,
              },
            ],
          },
          Object {
            "flex": 0,
            "height": 13,
            "width": 13,
          },
        ]
      }
      width={13}
    >
      <RNSVGGroup
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      >
        <RNSVGDefs>
          <RNSVGRadialGradient
            cx={0}
            cy={0}
            fx={0}
            fy={0}
            gradient={
              Array [
                0.8333333333333334,
                335544320,
                1,
                0,
              ]
            }
            gradientTransform={null}
            gradientUnits={1}
            name="bottomRight"
            rx={12}
            ry={12}
          />
        </RNSVGDefs>
        <RNSVGPath
          d="M12,0 a12,12 0 0 1 -12,12 v-2 v-10 h10 h2 Z"
          fill={
            Array [
              1,
              "bottomRight",
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
    <RNSVGSvgView
      bbHeight="100%"
      bbWidth="100%"
      focusable={false}
      height="100%"
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "position": "absolute",
          },
          Object {
            "flex": 0,
            "height": "100%",
            "width": "100%",
          },
        ]
      }
      width="100%"
    >
      <RNSVGGroup>
        <RNSVGDefs>
          <RNSVGMask
            height="100%"
            maskContentUnits={1}
            maskTransform={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            maskUnits={0}
            name="maskPaintBelow"
            width="100%"
            x="0%"
            y="0%"
          >
            <RNSVGRect
              fill={4294967295}
              height="100%"
              propList={
                Array [
                  "fill",
                ]
              }
              width="100%"
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  0,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y={0}
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x={0}
              y="100%"
            />
            <RNSVGRect
              fill={4278190080}
              height={10}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -10,
                  -10,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
              width={10}
              x="100%"
              y="100%"
            />
          </RNSVGMask>
        </RNSVGDefs>
        <RNSVGRect
          fill={4278190080}
          fillOpacity={0.08}
          height="100%"
          mask="maskPaintBelow"
          propList={
            Array [
              "fill",
              "fillOpacity",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "alignSelf": "flex-start",
        },
        undefined,
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "borderRadius": 10,
            "flexDirection": "row",
            "height": 60,
            "justifyContent": "space-between",
            "paddingLeft": 18,
            "paddingRight": 20,
            "width": "100%",
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": 25,
            },
            Object {},
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "process": [Function],
            }
          }
          style={
            Object {
              "width": "70%",
            }
          }
        />
      </View>
      <TextInput
        editable={true}
        placeholder="Email"
        placeholderTextColor="#C4C4C4"
        style={
          Object {
            "color": "#000",
            "flex": 1,
            "fontFamily": "Cairo-Regular",
            "textAlign": "right",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Input component should show the error text when there is an error passed in the props 1`] = `
Array [
  <View
    pointerEvents="box-none"
    style={
      Object {
        "margin": 40,
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 1,
          },
          undefined,
        ]
      }
    >
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": 10,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="left"
              x1="1"
              x2="0"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "left",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-20}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth={3}
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": 10,
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": 3,
            },
          ]
        }
        width={3}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="right"
              x1="0"
              x2="1"
              y1="0"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "right",
              ]
            }
            height="100%"
            propList={
              Array [
                "fill",
              ]
            }
            width={2}
            x={0}
            y={-20}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 10,
              "position": "absolute",
              "top": "100%",
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="bottom"
              x1="0"
              x2="0"
              y1="0"
              y2="1"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "bottom",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-20}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={3}
        bbWidth="100%"
        focusable={false}
        height={3}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": 10,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 3,
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="top"
              x1="0"
              x2="0"
              y1="1"
              y2="0"
            />
          </RNSVGDefs>
          <RNSVGRect
            fill={
              Array [
                1,
                "top",
              ]
            }
            height={2}
            propList={
              Array [
                "fill",
              ]
            }
            width="100%"
            x={-20}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={13}
        bbWidth={13}
        focusable={false}
        height={13}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": -2,
            },
            Object {
              "flex": 0,
              "height": 13,
              "width": 13,
            },
          ]
        }
        width={13}
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={12}
              cy={12}
              fx={12}
              fy={12}
              gradient={
                Array [
                  0.8333333333333334,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topLeft"
              rx={12}
              ry={12}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,12 a12,12 0 0 1 12 -12 v2 v10 h-10 h-2 Z"
            fill={
              Array [
                1,
                "topLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={13}
        bbWidth={13}
        focusable={false}
        height={13}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": -2,
              "transform": Array [
                Object {
                  "translateX": -10,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 13,
              "width": 13,
            },
          ]
        }
        width={13}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={12}
              fx={0}
              fy={12}
              gradient={
                Array [
                  0.8333333333333334,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="topRight"
              rx={12}
              ry={12}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M0,0 a12,12 0 0 1 12,12 h-2 h-10 v-10 v-2 Z"
            fill={
              Array [
                1,
                "topRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={13}
        bbWidth={13}
        focusable={false}
        height={13}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": -2,
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateY": -10,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 13,
              "width": 13,
            },
          ]
        }
        width={13}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={12}
              cy={0}
              fx={12}
              fy={0}
              gradient={
                Array [
                  0.8333333333333334,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomLeft"
              rx={12}
              ry={12}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M12,12 a12,12 0 0 1 -12,-12 h2 h10 v10 v2 Z"
            fill={
              Array [
                1,
                "bottomLeft",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight={13}
        bbWidth={13}
        focusable={false}
        height={13}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "left": "100%",
              "position": "absolute",
              "top": "100%",
              "transform": Array [
                Object {
                  "translateX": -10,
                },
                Object {
                  "translateY": -10,
                },
              ],
            },
            Object {
              "flex": 0,
              "height": 13,
              "width": 13,
            },
          ]
        }
        width={13}
      >
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              0,
              0,
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGRadialGradient
              cx={0}
              cy={0}
              fx={0}
              fy={0}
              gradient={
                Array [
                  0.8333333333333334,
                  335544320,
                  1,
                  0,
                ]
              }
              gradientTransform={null}
              gradientUnits={1}
              name="bottomRight"
              rx={12}
              ry={12}
            />
          </RNSVGDefs>
          <RNSVGPath
            d="M12,0 a12,12 0 0 1 -12,12 v-2 v-10 h10 h2 Z"
            fill={
              Array [
                1,
                "bottomRight",
              ]
            }
            propList={
              Array [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <RNSVGSvgView
        bbHeight="100%"
        bbWidth="100%"
        focusable={false}
        height="100%"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "position": "absolute",
            },
            Object {
              "flex": 0,
              "height": "100%",
              "width": "100%",
            },
          ]
        }
        width="100%"
      >
        <RNSVGGroup>
          <RNSVGDefs>
            <RNSVGMask
              height="100%"
              maskContentUnits={1}
              maskTransform={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              maskUnits={0}
              name="maskPaintBelow"
              width="100%"
              x="0%"
              y="0%"
            >
              <RNSVGRect
                fill={4294967295}
                height="100%"
                propList={
                  Array [
                    "fill",
                  ]
                }
                width="100%"
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={10}
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x={0}
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={10}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -10,
                    0,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x="100%"
                y={0}
              />
              <RNSVGRect
                fill={4278190080}
                height={10}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    0,
                    -10,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x={0}
                y="100%"
              />
              <RNSVGRect
                fill={4278190080}
                height={10}
                matrix={
                  Array [
                    1,
                    0,
                    0,
                    1,
                    -10,
                    -10,
                  ]
                }
                propList={
                  Array [
                    "fill",
                  ]
                }
                width={10}
                x="100%"
                y="100%"
              />
            </RNSVGMask>
          </RNSVGDefs>
          <RNSVGRect
            fill={4278190080}
            fillOpacity={0.08}
            height="100%"
            mask="maskPaintBelow"
            propList={
              Array [
                "fill",
                "fillOpacity",
              ]
            }
            width="100%"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
      style={
        Array [
          Object {
            "alignSelf": "flex-start",
          },
          undefined,
          undefined,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 10,
              "flexDirection": "row",
              "height": 60,
              "justifyContent": "space-between",
              "paddingLeft": 18,
              "paddingRight": 20,
              "width": "100%",
            },
            Object {
              "flexDirection": "row-reverse",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "width": 25,
              },
              Object {
                "marginLeft": 5,
              },
            ]
          }
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "process": [Function],
              }
            }
            style={
              Object {
                "width": "70%",
              }
            }
          />
        </View>
        <TextInput
          editable={true}
          placeholder="Email"
          placeholderTextColor="#C4C4C4"
          style={
            Object {
              "color": "#000",
              "flex": 1,
              "fontFamily": "Cairo-Regular",
              "textAlign": "right",
            }
          }
        />
      </View>
    </View>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#bb0000",
          "fontFamily": "Cairo-Regular",
          "fontSize": 16,
          "textAlign": "right",
        },
        Object {
          "fontSize": 12,
          "marginTop": -5,
          "paddingRight": 15,
        },
      ]
    }
  >
    someError
  </Text>,
]
`;
